Ajoute un Makefile pour gérer le projet
Actuellement, permet d'installer les dépendances

--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 Php Blog School
 ===============
+
+Installer les dépendances du projet :
+-------------------------------------
+
+    $ make
+    ou
+    $ make install
